WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48675
[Qt] QtTestBrowser: Fix uninitialized read in FpsTimer
https://bugs.webkit.org/show_bug.cgi?id=48675
Summary
[Qt] QtTestBrowser: Fix uninitialized read in FpsTimer
Andreas Kling
Reported
2010-10-29 14:16:35 PDT
==12248== Conditional jump or move depends on uninitialised value(s) ==12248== at 0x7ED0B7B: QTimerInfoList::unregisterTimer(int) (qeventdispatcher_unix.cpp:487) ==12248== by 0x42CD0D: FpsTimer::stop() (fpstimer.cpp:66) ==12248== by 0x42C4D5: WebViewGraphicsBased::setFrameRateMeasurementEnabled(bool) (webview.cpp:135) ==12248== by 0x41E9DD: LauncherWindow::applyPrefs() (launcherwindow.cpp:156) ==12248== by 0x41EB75: LauncherWindow::initializeView() (launcherwindow.cpp:131) ==12248== by 0x4226D2: LauncherWindow::init() (launcherwindow.cpp:90) ==12248== by 0x422EF7: LauncherWindow::LauncherWindow(WindowOptions*, QGraphicsScene*) (launcherwindow.cpp:49) ==12248== by 0x42753E: main (main.cpp:247)
Attachments
Proposed patch
(2.10 KB, patch)
2010-10-29 14:18 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-10-29 14:18:50 PDT
Created
attachment 72391
[details]
Proposed patch
Andreas Kling
Comment 2
2010-10-29 16:19:49 PDT
Comment on
attachment 72391
[details]
Proposed patch Clearing flags on attachment: 72391 Committed
r70946
: <
http://trac.webkit.org/changeset/70946
>
Andreas Kling
Comment 3
2010-10-29 16:19:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug