2010-10-29  Andreas Kling  <kling@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtTestBrowser: Fix uninitialized read in FpsTimer
        https://bugs.webkit.org/show_bug.cgi?id=48675

        FpsTimer::m_timer was never initialized and passed to QObject::killTimer()
        on startup with in -graphicsbased mode.

        * QtTestBrowser/fpstimer.cpp:
        (FpsTimer::FpsTimer):
        (FpsTimer::numFrames):
        (FpsTimer::stop):
        (FpsTimer::timerEvent):
        * QtTestBrowser/fpstimer.h:


Canonical link: https://commits.webkit.org/61449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70946 268f45cc-cd09-0410-ab3c-d52691b4dbfc